# scrappey-wrapper-python

./: .gitignore  LICENSE  LICENSE.txt  README.md  __init__.py  pyproject.toml  readme.md  setup.py  test.py
.github/workflows/: publish.yml  test.yml
examples/csharp/: Example.cs  ScrappeyExample.csproj
examples/curl/: examples.sh
examples/go/: example.go  go.mod
examples/java/: Example.java
examples/kotlin/: Example.kt  build.gradle.kts
examples/nodejs/: example.js  package.json
examples/php/: example.php
examples/python/: async_example.py  example.py  requests_example.py  requirements.txt
examples/ruby/: Gemfile  example.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/typescript/: example.ts  package.json  tsconfig.json
scrappeycom/: scrappey.py  test.py
scrappeycom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scrappey/: __init__.py  async_client.py  client.py  exceptions.py  requests.py  types.py
tests/: test_client.py  test_requests.py
